[tool.poetry]
name = "correction"
version = "0.1.0"
description = ""
authors = ["Vincent Perrollaz <vincent.perrollaz@univ-tours.fr>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.11.1"
mypy = "^0.812"
pylama = "^7.7.1"
black = "^21.5b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
